--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Zhaohui CHE / ZhaohuiCHE"
 title_separator          : "-"
 name                     : &name "Zhaohui CHE"
 description              : &description "PhD candidate in SJTU"
-url                      : "https://ZhaohuiCHE.github.io/index.html" 
+url                      : "https://ZhaohuiCHE.github.io" 
                             # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "https://ZhaohuiCHE.github.io/index.html" # the subpath of your site, e.g. "/blog"
+baseurl                  : "https://ZhaohuiCHE.github.io" # the subpath of your site, e.g. "/blog"
 repository               : "CZHQuality/ZhaohuiCHE.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
