--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,14 @@
 
 # Site Settings
 locale                   : "China"
-title                    : "Zhaohui CHE / ZhaohuiCHE"
+title                    : "Zhaohui CHE/ZhaohuiCHE"
 title_separator          : "-"
-name                     : &name "Zhaohui CHE"
+name                     : &name "ZhaohuiCHE"
 description              : &description "PhD candidate in SJTU"
-url                      : "https://ZhaohuiCHE.github.io" 
+url                      : "https://zhaohuiche.github.io" 
                             # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "https://ZhaohuiCHE.github.io" # the subpath of your site, e.g. "/blog"
-repository               : "CZHQuality/ZhaohuiCHE.github.io"
+baseurl                  : "https://zhaohuiche.github.io" # the subpath of your site, e.g. "/blog"
+repository               : "CZHQuality/zhaohuiche.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
