--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Zhaohui CHE"
 title_separator          : "-"
 name                     : &name "Dr. ZhaohuiCHE"
 description              : &description "PhD candidate in SJTU"
-url                      : https://zhaohuiche.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://CZHQuality.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "zhaohuiche.github.io"
+repository               : "CZHQuality.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
