--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Zhaohui Che"
-  avatar           : # "files/ZhaohuiChe.jpg"
+  avatar           : "ZhaohuiChe.jpg"
   bio              : "PhD candidate in Shanghai Jiao Tong University"
   location         : "Shanghai-China"
   employer         :
